syntax = "proto3";

package user;

message User {
  string id = 1;
  string fullname = 2;
  string username = 3;
  string email = 4;
  bool isVerified = 5;
  string bio = 6;
  string imageUrl = 7;
  string imageId = 8;
  string backgroundImageUrl = 9;
  string backgroundImageId = 10;
  string status = 11;
  string createdAt = 12;
  string updatedAt = 13;
}

message UserDatas {
  repeated User data = 1;
}

message UserData {
  User data = 1;
}

message MultipleUserParams {
  repeated string ids = 1;
}

message NoArguments {}

message UserParams {
  string id = 1;
}

message LoginInput {
  string email = 1;
  string password = 2;
  string as = 3;
}

message TokenResponse {
  string token = 1;
}

message RegisterInput {
  string fullname = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string role = 5;
  string confirmPassword = 6;
}

service UserService {
  rpc GetMultipleUser(MultipleUserParams) returns (UserDatas) {}
  rpc Me(NoArguments) returns (UserData) {}
  rpc GetUserById(UserParams) returns (UserData) {}
  rpc Register(RegisterInput) returns (UserData) {}
  rpc Login(LoginInput) returns (TokenResponse) {}
}